Fix image width on mobile safari

--- a/style.css
+++ b/style.css
@@ -74,7 +74,8 @@ h1 {
 }
 
 img {
-    max-width: 100%; 
+    width: 100%;
+    max-width: 300px;
     box-shadow: 0 0 20px #ccc; 
     border-radius:  20px; 
 }
